# robotino_rl

./: .gitignore  CMakeLists.txt  DeepQLearning.ipynb  Important.txt  Oval.dae  Oval.skp  README.md  TrackGrößert.dae  TrackWalls.dae  Unbenannt.skp  ddqn_robotino.ipynb  package.xml  resul
.ipynb_checkpoints/: reinforcement_q_learning-checkpoint.ipynb
Oval1/: model.config  model.sdf
final_project/: CMakeLists.txt  README.md  package.xml
final_project/launch/: finalProject.launch
final_project/src/: reinforcmentLearning.py
launch/: finalProject.launch  robotino_rl.launch
models/: policy_net_100.pth  policy_net_150.pth  policy_net_200.pth  policy_net_250.pth  policy_net_300.pth  policy_net_50.pth  policy_net_500.pth  policy_net_700.pth  policy_net_900.pth  target_net_100.pth  target_net_150.pth  target_net_200.pth  target_net_250.pth  target_net_300.pth  target_net_400.pth  target_net_50.pth  target_net_600.pth  target_net_800.pth  target_net_900.pth
models_11_02/: policy_net_400.pth  policy_net_600.pth  policy_net_800.pth  target_net_500.pth  target_net_700.pth
models_working_12_02_19_00/: policy_net_100.pth  policy_net_200.pth  policy_net_50.pth  target_net_100.pth  target_net_200.pth  target_net_50.pth
my_package_tut1/: CMakeLists.txt  package.xml
my_package_tut1/src/: plannerNode.py
my_package_tut2/: CMakeLists.txt  package.xml
my_package_tut2/launch/: launchfile.launch
my_package_tut2/src/: README.md  dontHitWallsNode.py  dontHitWallsNodeOld.py
my_package_tut5/: CMakeLists.txt  README.md  package.xml
my_package_tut5/src/: pathPlanning.py
pcimr_localization/: CMakeLists.txt  package.xml
pcimr_localization/src/: tut3Node.py
pcimr_navigation/: CMakeLists.txt  package.xml
pcimr_navigation/launch/: navigation.launch
pcimr_navigation/src/: robot_mover
pcimr_simulation/: CMakeLists.txt  package.xml
pcimr_simulation/config/: simple-sim.rviz
pcimr_simulation/launch/: simulation.launch
pcimr_simulation/src/: simple_sim_node
pcimr_simulation/src/robot_sim/: bresenham.py  discrete_robot_sim.py  map_loader.py
pcimr_simulation/srv/: InitPos.srv
pcimr_tutorial/: CMakeLists.txt  package.xml
resources/imgs/: map.pgm  map.yaml
rto_simulation/: README.md  dependencies.rosinstall
rto_simulation/rto_bringup_sim/: CMakeLists.txt  package.xml
rto_simulation/rto_bringup_sim/launch/: robot.launch  spawn_robot.launch
rto_simulation/rto_simulation/: CMakeLists.txt  package.xml
rto_simulation/rto_worlds/: CMakeLists.txt  package.xml
rto_simulation/rto_worlds/worlds/: OvalWorld1.world  test.world  track1.world
src/: basic_rl.py  deep_rl_test.py  deep_rl_train.py  reinforcmentLearning.py
src/components/: memory.py  network.py  parameters.py
src/controllers/: controller_simple.py  controller_with_checkpoints.py  controller_with_goal.py
src/parameters/: global_parameters.py  parameters_checkpoints.py  parameters_goal_distance.py  parameters_simple.py
worlds/: circular_track.world  track_1.world  track_1_cp.world  track_2.world  track_2_cp.world  track_3.world  track_3_cp.world  track_4.world  track_4_cp.world  track_5.world  track_5_cp.world  track_6.world  track_6_cp.world
