<?xml version="1.0"?>
<package format="2">
  <name>pcimr_simulation</name>
  <version>0.0.0</version>
  <description>The pcimr_simulation package</description>

  <author email="robin.dietrich@tum.de">Robin Dietrich</author>
  <maintainer email="robin.dietrich@tum.de">Robin Dietrich</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
  </export>
</package>
