<?xml version="1.0"?>
<package format="2">
  <name>pcimr_tutorial</name>
  <version>0.0.0</version>
  <description>The pcimr_tutorial package</description>

  <author email="robin.dietrich@tum.de">Robin Dietrich</author>
  <maintainer email="robin.dietrich@tum.de">Robin Dietrich</maintainer>

  <license>BSD</license>

  <!-- <url type="website">http://wiki.ros.org/pcimr_tutorial</url> -->

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
