<package format="2">
  <name>rto_simulation</name>
  <version>0.1.0</version>
  <description>
    Simulation ROS packages for the Robotino (meta package)
  </description>
  <license>Apache 2.0</license>
  <license>BSD</license>
  <author email="robin.dietrich@tum.de">Robin Dietrich</author>
  <maintainer email="robin.dietrich@tum.de">Robin Dietrich</maintainer>
  <!-- <url type="website">http://wiki.ros.org/turtlebot3</url>
  <url type="emanual">http://turtlebot3.robotis.com</url> -->
  <url type="repository">https://github.com/dietriro/rto_simulation</url>
  <url type="bugtracker">https://github.com/dietriro/rto_simulation/issues</url>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rto_bringup_sim</exec_depend>
  <exec_depend>rto_worlds</exec_depend>

  <export><metapackage/></export>
</package>